# talks

./: .editorconfig  .gitignore  .talismanrc  README.md
2022-08-27-python-floripa/: README.md  requirements.txt
2022-08-27-python-floripa/conteúdo/00-função-minima/: frasko.py
2022-08-27-python-floripa/conteúdo/00-prévia/: app.py
2022-08-27-python-floripa/conteúdo/01-request-response/01-estrutura-minima-função/: app.py  frasko.py
2022-08-27-python-floripa/conteúdo/01-request-response/02-estrutura-minima-classe/: app.py  frasko.py
2022-08-27-python-floripa/conteúdo/02-roteamento-sem-metodos/: frasko.py
2022-08-27-python-floripa/conteúdo/03-roteamento-com-metodos/: frasko.py
2022-08-27-python-floripa/conteúdo/04-NOT_FOUND/: frasko.py
2022-08-27-python-floripa/conteúdo/05-rotas-parametrizadas/: frasko.py
2022-08-27-python-floripa/conteúdo/06-class-based-decorators/: app.py  frasko.py
2022-08-27-python-floripa/conteúdo/07-rotas-duplicadas/: app.py
2022-11-25-semana-de-ciencia-da-computacao-uern/: README.md  metaprogramação-apresentação.ipynb
2025-06-14-grupyrn-mossoro/: README.md
2025-06-14-grupyrn-mossoro/dinofauro-bot/: echo.py  main.py  pyproject.toml
2025-06-14-grupyrn-mossoro/dinofauro-bot/bot/: commands.py  config.py  translate.py
conteúdo/00-função-minima/: app.py
conteúdo/01-classe-minima/: app.py  frasko.py
conteúdo/02-roteamento-sem-metodos/: app.py
conteúdo/03-roteamento-com-metodos/: app.py
conteúdo/04-NOT_FOUND/: app.py
conteúdo/05-rotas-parametrizadas/: app.py
conteúdo/07-rotas-duplicadas/: frasko.py
(+12 files in other folders)
